tests/parse/error_ituple5.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_ituple() {
  ituple it[2] = {7, 8};  // ituple<2> is correct
}

// CHECK: error: no ituple array is allowed.
// CHECK-NOT: error:

